--- a/Traduccion2.ipynb
+++ b/Traduccion2.ipynb
@@ -1115,6 +1115,291 @@
    "source": [
     "doc.get_xml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_translator import GoogleTranslator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98\n",
+      "00:09:47,660 --> 00:09:53,780\n",
+      "obtuve cien veces 79, eso es, y solo estoy usando dólares aquí, pero en realidad debería ser\n",
+      "\n",
+      "99\n",
+      "00:09:53,780 --> 00:10:04,660\n",
+      "pips 7900, tenemos operaciones abiertas y hemos hecho ese cálculo. Volveré por usted, así que\n",
+      "\n",
+      "100\n",
+      "00:10:04,660 --> 00:10:17,820\n",
+      "tenemos 500 900 1200 1400 1500 1600 1800 y luego 2100 así que tenemos operaciones abiertas que tienen un\n",
+      "\n",
+      "101\n",
+      "00:10:17,820 --> 00:10:28,100\n",
+      "saldo de 2100 significa que hemos obtenido una ganancia de 5800 pips que es una ganancia bastante grande en seis semanas\n",
+      "\n",
+      "102\n",
+      "00:10:28,100 --> 00:10:33,900\n",
+      "de comercio eso es mil pips a la semana que es excepcional y ese es el tipo de cosas que\n",
+      "\n",
+      "103\n",
+      "00:10:33,900 --> 00:10:41,020\n",
+      "sale del comercio de red y solo piénsalo, lo hicimos en piloto automático porque este es un\n",
+      "\n",
+      "104\n",
+      "00:10:41,020 --> 00:10:47,500\n",
+      "sistema que es tan simple que se puede automatizar y eso es lo que de hecho hemos hecho, usted puede hacer\n",
+      "\n",
+      "105\n",
+      "00:10:47,500 --> 00:10:53,020\n",
+      "manualmente usando órdenes pendientes y ese tipo de cosas, pero ciertamente ¿por qué hacerlo manualmente si el\n",
+      "\n",
+      "106\n",
+      "00:10:53,020 --> 00:10:59,100\n",
+      "robot, el robot comercial lo hará por usted y es un sistema tan simple, ¿cuáles son los críticos?\n",
+      "\n",
+      "107\n",
+      "00:10:59,100 --> 00:11:04,540\n",
+      "factores de éxito cuando se negocian cuadrículas, en primer lugar, debe usar monedas laterales que no desea\n",
+      "\n",
+      "108\n",
+      "00:11:04,540 --> 00:11:11,340\n",
+      "los que van a tener una tendencia de 2000 pips de una sola vez ese tipo de moneda y existen tales monedas\n",
+      "\n",
+      "109\n",
+      "00:11:11,340 --> 00:11:18,060\n",
+      "como el franco euro es una moneda lateral realmente agradable, por lo que selecciona las monedas laterales\n",
+      "\n",
+      "110\n",
+      "00:11:18,060 --> 00:11:24,820\n",
+      "el tamaño de la brecha también debe tener en cuenta la volatilidad de su moneda, así como el riesgo\n",
+      "\n",
+      "111\n",
+      "00:11:24,820 --> 00:11:32,260\n",
+      "apetito al que te expondrás, así que lo que quiero decir con eso es que si el euro como he\n",
+      "\n",
+      "112\n",
+      "00:11:32,260 --> 00:11:39,220\n",
+      "mostrado anteriormente tiene una brecha de cien y la libra nueva zelanda, que es una moneda muy volátil\n",
+      "\n",
+      "113\n",
+      "00:11:39,220 --> 00:11:46,020\n",
+      "usted, los tamaños de los espacios deben tener eso en cuenta y deben ser mucho más grandes, por lo que el tamaño de los espacios es muy\n",
+      "\n",
+      "114\n",
+      "00:11:46,020 --> 00:11:52,420\n",
+      "importante que controle su riesgo con el tamaño de la brecha, entonces el otro aspecto son las entradas de efectivo regulares si\n",
+      "\n",
+      "115\n",
+      "00:11:52,420 --> 00:12:00,260\n",
+      "tiene demasiados tratos abiertos que también pueden aumentar su riesgo de negociación, así como el costo\n",
+      "\n",
+      "116\n",
+      "00:12:00,260 --> 00:12:07,940\n",
+      "de mantener estos acuerdos abiertos, los corredores cobran cargos durante la noche, a veces la noche\n",
+      "\n",
+      "117\n",
+      "00:12:07,940 --> 00:12:12,660\n",
+      "las cargas son positivas a veces son negativas pero en general no queremos exponernos\n",
+      "\n",
+      "118\n",
+      "00:12:12,660 --> 00:12:22,100\n",
+      "demasiados cargos nocturnos y luego el enfoque de cartera es muy importante que no desea\n",
+      "\n",
+      "119\n",
+      "00:12:22,100 --> 00:12:29,380\n",
+      "opere una cuadrícula durante toda su vida y coloque todo su riesgo en una cuadrícula que debería estar negociando, vamos\n",
+      "\n",
+      "120\n",
+      "00:12:29,380 --> 00:12:34,740\n",
+      "diga 10 cuadrículas con diferentes monedas, diferentes tamaños de espacio, ese tipo de cosas y le mostraré\n",
+      "\n",
+      "121\n",
+      "00:12:34,740 --> 00:12:40,660\n",
+      "ejemplos de eso y debería negociarlo como una cartera para que si uno sale mal, los otros pueden\n",
+      "\n",
+      "122\n",
+      "00:12:41,700 --> 00:12:48,260\n",
+      "cuidarlo, etc., por lo que esos son los factores críticos de éxito. negociación de cartera\n",
+      "\n",
+      "123\n",
+      "00:12:48,900 --> 00:12:56,580\n",
+      "podar regularmente tener un buen tamaño apropiado y monedas laterales ahora tenemos en este\n",
+      "\n",
+      "124\n",
+      "00:12:56,580 --> 00:13:01,460\n",
+      "robot que mencioné anteriormente, tenemos versiones plug and play donde la moneda ya está\n",
+      "\n",
+      "125\n",
+      "00:13:01,460 --> 00:13:06,820\n",
+      "seleccionado, el tamaño del espacio ya está seleccionado, por lo que mucho de eso ya se ha hecho por usted\n",
+      "\n",
+      "126\n",
+      "00:13:07,380 --> 00:13:13,140\n",
+      "y aquí hay algunos resultados en cuentas reales, estas cuentas se han negociado en vivo, todas\n",
+      "\n",
+      "127\n",
+      "00:13:13,140 --> 00:13:19,700\n",
+      "comenzó como una cuenta de mil dólares y puede ver los hermosos resultados que obtuvimos\n",
+      "\n",
+      "128\n",
+      "00:13:19,700 --> 00:13:26,420\n",
+      "y hay algunos otros robots incluidos aquí, pero la tendencia de la cuadrícula multiplica por mucho nuestra mayoría\n",
+      "\n",
+      "129\n",
+      "00:13:26,420 --> 00:13:33,700\n",
+      "ea robusto y produce resultados realmente buenos e incluso si comienza a usarlo en\n",
+      "\n",
+      "130\n",
+      "00:13:33,700 --> 00:13:41,140\n",
+      "en el comercio de índices aquí, puede ver uno que se ha estado ejecutando y realmente ha generado un gran\n",
+      "\n",
+      "131\n",
+      "00:13:41,780 --> 00:13:47,220\n",
+      "devoluciones eso es lo que hace ganar dinero ea, así que no es lo que estamos viendo y\n",
+      "\n",
+      "132\n",
+      "00:13:47,220 --> 00:13:52,260\n",
+      "y puedes ver la tendencia de la cuadrícula multiplicarse nuevamente. Resultados fantásticos que han surgido de estos\n",
+      "\n",
+      "133\n",
+      "00:13:52,260 --> 00:13:57,220\n",
+      "estos fueron los que se negociaron en una cuenta de diez mil dólares, pero solo muestra el\n",
+      "\n",
+      "134\n",
+      "00:13:57,220 --> 00:14:04,260\n",
+      "robustez de estos años en particular si elige la moneda correcta el tamaño de cuadrícula correcto y estos\n",
+      "\n",
+      "135\n",
+      "00:14:04,260 --> 00:14:10,100\n",
+      "de hecho, no se podaron en absoluto, solo jugaron negociados continuamente durante el período y creo\n",
+      "\n",
+      "136\n",
+      "00:14:10,100 --> 00:14:16,580\n",
+      "esto fue alrededor de un período de seis o siete meses y aquí hay un ejemplo de una de esas cuentas que\n",
+      "\n",
+      "137\n",
+      "00:14:16,580 --> 00:14:22,580\n",
+      "puede ver que es casi un cien por ciento de tasa de éxito leve y no del cien por ciento\n",
+      "\n",
+      "138\n",
+      "00:14:22,580 --> 00:14:28,260\n",
+      "y eso es a veces cuando hay picos esparcidos y cosas así, a veces se echan a perder\n",
+      "\n",
+      "139\n",
+      "00:14:28,260 --> 00:14:33,780\n",
+      "el registro del cien por ciento pero esta es una cuenta real y se puede ver lo hermoso que es el patrimonio\n",
+      "\n",
+      "140\n",
+      "00:14:33,780 --> 00:14:40,340\n",
+      "el gráfico está subiendo y estaba negociando el franco euro y es un rendimiento del cincuenta por ciento sobre un\n",
+      "\n",
+      "141\n",
+      "00:14:40,340 --> 00:14:50,500\n",
+      "período de dos poco más de 200 días, por lo que está viendo un rendimiento muy bueno con un riesgo razonablemente bajo\n",
+      "\n",
+      "142\n",
+      "00:14:50,500 --> 00:14:55,940\n",
+      "como mencioné anteriormente, hemos automatizado el comercio de la red aquí está el multiplicador de tendencia de la red\n",
+      "\n",
+      "143\n",
+      "00:14:55,940 --> 00:15:01,060\n",
+      "mientras que lo llamamos multiplicador, como puede ver cada vez que el precio visita el mismo nivel de cuadrícula\n",
+      "\n",
+      "144\n",
+      "00:15:01,060 --> 00:15:06,180\n",
+      "cobra dos y tres veces y cuatro veces una y otra y otra vez\n",
+      "\n",
+      "145\n",
+      "00:15:06,180 --> 00:15:14,740\n",
+      "y es por eso que multiplica las ganancias incluso en una tendencia, así que les mostré antes que había\n",
+      "\n",
+      "146\n",
+      "00:15:14,740 --> 00:15:21,780\n",
+      "digamos 800 por tendencia hacia arriba y hacia abajo y el multiplicador de tendencia de la cuadrícula simplemente multiplicó las ganancias\n",
+      "\n",
+      "147\n",
+      "00:15:21,780 --> 00:15:26,180\n",
+      "todo el tiempo, incluso en un mercado en tendencia, pero no desea tener un\n",
+      "\n",
+      "148\n",
+      "00:15:27,140 --> 00:15:31,540\n",
+      "un mercado en tendencia pero un mercado en tendencia razonable que aún puede manejar\n",
+      "\n",
+      "149\n",
+      "00:15:32,740 --> 00:15:38,820\n",
+      "ahora, si desea obtener más información sobre este fantástico ea, utilice el enlace que está\n",
+      "\n",
+      "150\n",
+      "00:15:38,820 --> 00:15:45,060\n",
+      "siempre que se proporcione un enlace en el que se puede hacer clic en el comentario y en la descripción del video\n",
+      "\n",
+      "151\n",
+      "00:15:45,940 --> 00:15:50,500\n",
+      "ahora espero que hayas disfrutado este video espero que te haya dado una idea de cuál es el potencial\n",
+      "\n",
+      "152\n",
+      "00:15:50,500 --> 00:15:58,580\n",
+      "de este ea en particular no he cubierto otras estrategias como una estrategia comercial unidireccional y\n",
+      "\n",
+      "153\n",
+      "00:15:58,580 --> 00:16:05,300\n",
+      "hay un montón de otras estrategias estrategias de poda que puede hacer, pero la estrategia básica\n",
+      "\n",
+      "154\n",
+      "00:16:05,300 --> 00:16:12,740\n",
+      "que te he mostrado ahora es lo suficientemente bueno como para que obtengas un muy buen retorno de tu dinero\n",
+      "\n",
+      "155\n",
+      "00:16:12,740 --> 00:16:17,380\n",
+      "y en sus esfuerzos, la belleza aquí está totalmente automatizada, no tiene que hacerlo\n",
+      "\n",
+      "156\n",
+      "00:16:17,380 --> 00:16:23,620\n",
+      "mira las pantallas no tienes que mirar los gráficos y quieres un montón de irracional\n",
+      "\n",
+      "157\n",
+      "00:16:23,620 --> 00:16:28,980\n",
+      "volatilidad en el mercado porque sabes que cada vez que el precio toca una cuadrícula estás\n",
+      "\n",
+      "158\n",
+      "00:16:28,980 --> 00:16:34,100\n",
+      "cobrando positivamente de mí Alex Droyer Cheerio\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "archivo = r'I:\\s_original - copia (2).srt'\n",
+    "file = r'I:\\script-translate 2.txt'\n",
+    "\n",
+    "with open(archivo,\"rb\") as f:\n",
+    "    data = f.readlines()\n",
+    "\n",
+    "# string = ''\n",
+    "for i in data:\n",
+    "    j = GoogleTranslator(source='en', target='es').translate(i.decode('utf-8'))\n",
+    "    print(j)\n",
+    "    # string = string + j + '\\n'\n",
+    "    f = open(file, 'w')\n",
+    "    f.write(j)\n",
+    "\n",
+    "f.close()"
+   ]
   }
  ],
  "metadata": {
