--- a/simulacion_montecarlo.ipynb
+++ b/simulacion_montecarlo.ipynb
@@ -7,22 +7,22 @@
    "source": [
     "# Método Monte Carlo\n",
     "\n",
-    "La simulación de Monte Carlo es una técnica que se utiliza para estimar resultados o analizar escenarios inciertos mediante la generación de múltiples muestras aleatorias. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ejemplo 1: El dado\n",
+    "La simulación de Monte Carlo es una técnica que se utiliza para estimar resultados o analizar escenarios inciertos mediante la generación de múltiples muestras aleatorias.\n",
     "\n",
-    "Un ejemplo común para entender la simulación de Monte Carlo en Python es simular el lanzamiento de un dado y estimar la probabilidad de obtener un número específico. Aquí tienes un ejemplo sencillo de cómo realizar esto en Python:"
+    "Queremos determinar cual es la **probabilidad** de que un evento aleatorio arroje un resultado concreto al ejecutarse el evento un numero grande de veces. El resultado concreto lo llamaremos **objetivo**, y el numero grande de veces que ejecutamos el evento lo llamaremos **simulaciones**. Para esto:\n",
+    "\n",
+    "* **Caracterizaremos el evento aleatorio a traves de una funcion que retorne sus posibles resultados** _(Esto es esencial en el método!)_.\n",
+    "\n",
+    "* **Luego definiremos otra función que ejecute la primera función un número de veces igual al `numero de simulaciones`, y determine cuantas veces obtenemos el `objetivo`.**\n",
+    "\n",
+    "* **Finalmente calcularemos la `probabilidad` del resultado del evento en función del número de ocurrencias.**\n",
+    "\n",
+    "Para lograr caracterizar los eventos importaremos en primer lugar el módulo *random* de python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Genera un número aleatorio entre 1 y 6 simulando un lanzamiento de dado"
+    "## Ejemplo 1: El dado\n",
+    "\n",
+    "Queremos estimar la probabilidad de obtener 5 al lanzar un dado. Acá:\n",
+    "\n",
+    "* objetivo = 5\n",
+    "* Número de simulaciones = 100000"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caracterizando el evento aleatorio\n",
+    "\n",
+    "Entendido esto, caractericemos el evento. \n",
+    "\n",
+    "Genera el resultado de un lanzamiento de forma aleatoria. Para esto generamos un número aleatorio entre 1 y 6 simulando un lanzamiento de dado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,25 +69,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Definiendo las simulaciones:\n",
+    "\n",
     "Definimos una funcion para producir la simulacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulacion_montecarlo(num_lanzamientos):\n",
+    "def simulacion_montecarlo(num_simulaciones):\n",
     "    conteo_objetivo = 0  # Contador para el número de veces que se obtiene el número objetivo\n",
     "    objetivo = 5  # Número objetivo a obtener\n",
     "    \n",
-    "    for _ in range(num_lanzamientos):\n",
+    "    for _ in range(num_simulaciones):\n",
     "        resultado = lanzamiento_dado()\n",
     "        if resultado == objetivo:\n",
     "            conteo_objetivo += 1\n",
     "    \n",
-    "    probabilidad = conteo_objetivo / num_lanzamientos\n",
+    "    probabilidad = conteo_objetivo / num_simulaciones\n",
     "    return probabilidad"
    ]
   },
@@ -79,19 +98,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Generando la Simulacion\n",
+    "\n",
     "Aplicamos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La probabilidad estimada de obtener el número 5 en un lanzamiento de dado es: 0.1694\n"
+      "La probabilidad estimada de obtener el número 5 en un lanzamiento de dado es: 0.1659\n"
      ]
     }
    ],
@@ -107,6 +128,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicación:\n",
+    "\n",
     "En este ejemplo, la función `lanzamiento_dado()` simula un lanzamiento de dado y devuelve un número aleatorio entre 1 y 6 utilizando la función `randint()` del módulo random. Luego, la función `simulacion_montecarlo()` realiza un número determinado de lanzamientos de dado y cuenta cuántas veces se obtiene el número objetivo _(en este caso, el número 5)_. Finalmente, calcula la probabilidad estimada dividiendo el número de veces que se obtuvo el número objetivo entre el número total de lanzamientos.\n",
     "\n",
     "Al aumentar el valor de **num_lanzamientos**, obtendrás una estimación más precisa de la probabilidad real. Recuerda que, debido a la naturaleza aleatoria de la simulación, la probabilidad estimada puede variar ligeramente en cada ejecución.\n",
@@ -119,7 +142,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo 2: Estimando el valor de π"
+    "## Ejemplo 2: Estimando el valor de π\n",
+    "\n",
+    "Tenemos un cuadrado circunscrito (con el circulo inscrito y de area máxima). El circulo es de radio unidad.\n",
+    "\n",
+    "Queremos estimar la probabilidad de obtener un punto a una distancia menor o igual a 1 _(un punto dentro del circulo)_ al generar puntos aleatorios dentro del cuadrado. Acá:\n",
+    "\n",
+    "* objetivo _(distancia)_ <= 1\n",
+    "* Número de simulaciones = 1000000"
    ]
   },
   {
@@ -127,12 +157,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generamos el evento aleatorio"
+    "### Caracterizando el evento aleatorio\n",
+    "\n",
+    "Entendido esto, caractericemos el evento aleatorio. \n",
+    "\n",
+    "Genera las distancias de los puntos dentro del cuadrado de forma aleatoria. Para esto, generamos las coordenadas mismas de forma aleatoria acotando su valor entre -1 y 1, y calculamos luego la distancia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +184,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Definiendo las simulaciones:\n",
+    "\n",
     "Definimos una funcion para producir la simulacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,19 +213,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Generando la Simulacion\n",
+    "\n",
     "Aplicamos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor estimado de pi es: 3.142576\n"
+      "El valor estimado de pi es: 3.143704\n"
      ]
     }
    ],
@@ -205,6 +243,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicación:\n",
+    "\n",
     "En este ejemplo, utilizamos la idea de que la relación entre el área de un círculo y un cuadrado circunscrito a él es π/4. Generamos puntos aleatorios dentro de un cuadrado de lado 2 y contamos cuántos de esos puntos caen dentro de un círculo unitario (radio 1). Al estimar la proporción de puntos dentro del círculo, multiplicamos por 4 para obtener una estimación del valor de π.\n",
     "\n",
     "A medida que incrementas el valor de `num_puntos`, obtendrás una estimación más precisa de π. La belleza de este ejemplo es que, aunque no estamos calculando π directamente, estamos utilizando la simulación de Monte Carlo para obtener una estimación de manera probabilística.\n",
@@ -212,6 +252,19 @@
     "Recuerda que debido a la naturaleza aleatoria de la simulación, el resultado puede variar en cada ejecución. Sin embargo, a medida que aumentes el número de puntos, la estimación se acercará más al valor real de π.\n",
     "\n",
     "Este ejemplo ilustra cómo se puede utilizar la simulación de Monte Carlo para estimar valores de una constante matemática y cómo los resultados convergen a medida que aumenta el tamaño de la muestra."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primeras conclusiones\n",
+    "\n",
+    "De estos dos ejemplos podemos observar que lo esencial acá es tener claridad sobre cuál es el evento aleatorio que se está estudiando y sobre todo cuál es el resultado objetivo cuya probabilidad se desea conocer en concreto.\n",
+    "\n",
+    "> Nota: \n",
+    "Las bases matemáticas de éste método son la Ley de los Grandes Números y el Teorema del Límite Central. Estos fundamentos garantizan que, al generar suficientes muestras aleatorias, la técnica pueda proporcionar estimaciones precisas y confiables de resultados inciertos."
    ]
   }
  ],
