--- a/simulacion_montecarlo/simulacion_montecarlo_(parte_1).ipynb
+++ b/simulacion_montecarlo/simulacion_montecarlo_(parte_1).ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Método Monte Carlo\n",
+    "# Método Monte Carlo (Parte I)\n",
     "\n",
     "La simulación de Monte Carlo es una técnica que se utiliza para estimar resultados o analizar escenarios inciertos mediante la generación de múltiples muestras aleatorias.\n",
     "\n",
