--- a/simulacion_montecarlo/simulacion_montecarlo_(parte_2).ipynb
+++ b/simulacion_montecarlo/simulacion_montecarlo_(parte_2).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import math\n",
-    "from scipy.stats import beta"
+    "import scipy.stats as stats\n",
+    "import random"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +112,53 @@
    ],
    "source": [
     "print(activities_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculamos los valores de la Beta-Pert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   %_Probabilidad   Beta-Pert\n",
+      "0        0.846805   62.924477\n",
+      "1        0.868626   47.889904\n",
+      "2        0.990839  148.930416\n",
+      "3        0.766624   75.093309\n",
+      "4        0.129426  110.704760\n",
+      "5        0.326265   86.205906\n",
+      "6        0.877687   96.401447\n",
+      "7        0.990518   37.186207\n"
+     ]
+    }
+   ],
+   "source": [
+    "dist_df = {\n",
+    "    '%_Probabilidad': [random.random() for _ in range(len(activities_df))],\n",
+    "}\n",
+    "\n",
+    "dist_df['Beta-Pert'] = stats.beta.ppf(\n",
+    "    dist_df['%_Probabilidad'],\n",
+    "    activities_df['α'],\n",
+    "    activities_df['β'],\n",
+    "    activities_df['Min'],\n",
+    "    activities_df['Max'],\n",
+    ")\n",
+    "\n",
+    "dist_df = pd.DataFrame(dist_df)\n",
+    "\n",
+    "print(dist_df)"
    ]
   }
  ],
